--- a/public/css/app.css
+++ b/public/css/app.css
@@ -928,7 +928,7 @@ code {
   background-repeat: no-repeat;
   background-position: bottom center;
   background-size: contain;
-  background-color: #2f3a40;
+  background-color: #434d53;
   color: #fff;
 }
 .wildcard > .card {
