--- a/public/css/app.css
+++ b/public/css/app.css
@@ -278,6 +278,9 @@ input[type=range]::-moz-range-thumb {
 input[type=range]::-ms-thumb {
   background: #4b636e;
 }
+input[type=range][disabled] {
+  opacity: .4;
+}
 
  /*!
  * radio
@@ -574,6 +577,17 @@ time {
   to { -webkit-transform: rotate(360deg); }
 }
 
+@keyframes heartbeat {
+  0% { transform: scale(1); }
+  50% {  transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
+@-webkit-keyframes heartbeat {
+  0% { -webkit-transform: scale(1); }
+  50% {  -webkit-transform: scale(1.2); }
+  100% { -webkit-transform: scale(1); }
+}
+
 /*!
  * list not found
  */
@@ -798,6 +812,13 @@ table.invoice tfoot > tr {
 .analytics {
   -webkit-animation-name: analytics;
   -webkit-animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+}
+
+.heartbeat {
+  -webkit-animation-name: heartbeat;
+  -webkit-animation-duration: 1s;
   -webkit-animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
 }
