--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3525,6 +3525,19 @@ nav.scrolled.active,
 }
 
 /*!
+ * color
+ */
+input[type=color] {
+  padding: 0;
+  border-width: 0;
+
+  width: 32px;
+  height: 32px;
+
+  cursor: pointer;
+}
+
+/*!
  * date-picker
  */
 .month-prev,
